fixes and style changes for skills section, refactor anaglyph and observer for different behaviour on mobile

--- a/app-pages/Home/Sections/About/about.module.css
+++ b/app-pages/Home/Sections/About/about.module.css
@@ -1,5 +1,6 @@
 .attributeItem {
     composes: pill from global;
+    composes: -sm_w-full from global;
 }
 
 .printingWrapper {
